--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Fuck AutoPlay Block</title>
-    <meta http-equiv="Refresh" content="0; url=//www.youtube.com/watch?v=xvFZjo5PgG0" />
+    <meta http-equiv="Refresh" content="0; url=//youtu.be/E8NHci2Hzw0?t=176" />
   </head>
   <body>
   </body>
